Developed dashboard features.

--- a/src/easymis/views/Dashboard.fxml
+++ b/src/easymis/views/Dashboard.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXTextArea?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,8 +20,8 @@
             <AnchorPane layoutX="71.0" layoutY="86.0" />
             <AnchorPane layoutX="31.0" layoutY="415.0" prefHeight="408.0" prefWidth="563.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
-                  <JFXDatePicker defaultColor="#3a84c3" layoutX="14.0" layoutY="78.0" promptText="Event Date" />
-                  <JFXButton layoutX="199.0" layoutY="78.0" style="-fx-background-color: #3A84C3;" styleClass="card" text="Search Availability" textFill="WHITE" />
+                  <JFXDatePicker fx:id="eventDateField" defaultColor="#3a84c3" layoutX="14.0" layoutY="78.0" promptText="Event Date" />
+                  <JFXButton fx:id="searchButton" layoutX="199.0" layoutY="78.0" onAction="#onClickOfSearch" style="-fx-background-color: #3A84C3;" styleClass="card" text="Search Availability" textFill="WHITE" />
                   <Text fill="#6a94e8" fontSmoothingType="LCD" layoutX="118.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="toolbar" text="Wedding">
                      <font>
                         <Font name="System Bold" size="14.0" />
@@ -48,7 +49,7 @@
                   </Text>
                   <AnchorPane layoutX="199.0" layoutY="118.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
                      <children>
-                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available">
+                        <Text fx:id="weddingAvailability" fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -57,7 +58,7 @@
                   </AnchorPane>
                   <AnchorPane layoutX="199.0" layoutY="155.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
                      <children>
-                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Available">
+                        <Text fx:id="mehandiAvailability" fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -66,7 +67,7 @@
                   </AnchorPane>
                   <AnchorPane layoutX="199.0" layoutY="228.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
                      <children>
-                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available">
+                        <Text fx:id="ishHallAvailable" fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -75,7 +76,7 @@
                   </AnchorPane>
                   <AnchorPane layoutX="199.0" layoutY="261.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
                      <children>
-                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available">
+                        <Text fx:id="nicaLoungeAvailability" fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -84,7 +85,7 @@
                   </AnchorPane>
                   <AnchorPane layoutX="199.0" layoutY="194.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
                      <children>
-                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Available">
+                        <Text fx:id="receptionAvailability" fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -122,7 +123,7 @@
                   </Text>
                   <AnchorPane layoutX="453.0" layoutY="14.0" prefHeight="70.0" prefWidth="99.0" styleClass="card">
                      <children>
-                        <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="-1.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="15">
+                        <Text fx:id="totalDiamonBookingThisYear" fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="-1.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
                            <font>
                               <Font name="System Bold" size="36.0" />
                            </font>
@@ -140,6 +141,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Text>
+                  <JFXTextArea fx:id="diamondNotifications" disable="true" editable="false" layoutX="15.0" layoutY="110.0" prefHeight="269.0" prefWidth="533.0" />
                </children></AnchorPane>
             <AnchorPane layoutX="31.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
@@ -148,7 +150,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="CALENDAR" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
                   </AnchorPane>
-                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="62">
+                  <Text fx:id="totalBookingThisYear" fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -172,7 +174,7 @@
                         <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" glyphName="LOCK" layoutX="38.0" layoutY="47.0" size="36" />
                      </children>
                   </AnchorPane>
-                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="12">
+                  <Text fx:id="totalBlockingThisYear" fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -196,7 +198,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="BAN" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
                   </AnchorPane>
-                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="15">
+                  <Text fx:id="totalCancellationThisYear" fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -220,7 +222,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="LIST" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
                   </AnchorPane>
-                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="10">
+                  <Text fx:id="averageBookingMonthly" fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
