changes as on 6/13 fxmls

--- a/src/easymis/views/EventBookingView.fxml
+++ b/src/easymis/views/EventBookingView.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -152,6 +153,12 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
+                                          <JFXButton layoutX="27.0" layoutY="164.0" prefHeight="35.0" prefWidth="155.0" style="-fx-background-color: #3a84c3;" text="Calculate" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="17.0" />
+                                             </font>
+                                          </JFXButton>
+                                          <FontAwesomeIconView fill="WHITE" glyphName="INR" layoutX="150.0" layoutY="191.0" size="24" />
                                        </children>
                                     </Pane>
                                  </children>
